# defr

./: .gitignore  pyproject.toml  readme.md
defr/: __init__.py  auth.py  contracts.py  input_validation.py  route.py  schedules.py  tables.py
defr/static/: style.css
defr/templates/: base.html
defr/templates/auth/: login.html
defr/templates/contracts/: create.html  edit.html  index.html
defr/templates/schedules/: display.html  monthly_report.html  sorted_report.html
