[project]
name = "defr"
version = "1.0.0"
description = "Inhouse deferred revenue solution"
dependencies = [
    "Flask==3.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "psycopg2-binary==2.9.10",
    "python-dateutil==2.8.2",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"